[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/Common/Menus/EndLevel/end_level_menu.gd" type="Script" id=1]
[ext_resource path="res://Game/Common/Themes/Menus/EndLevelMenu/theme.tres" type="Theme" id=2]
[ext_resource path="res://Game/Common/Utils/UI/common_button.gd" type="Script" id=3]

[node name="EndLevelMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 258.0
margin_top = 217.0
margin_right = 766.0
margin_bottom = 383.0

[node name="Time" type="Label" parent="VBoxContainer"]
margin_right = 508.0
margin_bottom = 75.0
text = "99:99:999"
align = 1

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 508.0
margin_bottom = 166.0
rect_min_size = Vector2( 500, 0 )
alignment = 1

[node name="MainMenuButton" type="Button" parent="VBoxContainer/Buttons"]
margin_right = 119.0
margin_bottom = 46.0
size_flags_horizontal = 3
text = "MAIN_MENU"
script = ExtResource( 3 )

[node name="RestartButton" type="Button" parent="VBoxContainer/Buttons"]
margin_left = 149.0
margin_right = 300.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "MENU_RESTART"
script = ExtResource( 3 )

[node name="NextButton" type="Button" parent="VBoxContainer/Buttons"]
margin_left = 330.0
margin_right = 508.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "MENU_NEXT_LEVEL"
script = ExtResource( 3 )
